# TUM-2024

./: README.md  pyproject.toml
tum_2024/: experiment.ipynb  model.py  run.sh  script_cifar.py  script_mnist.py  train.py  utils.py  visualization.ipynb
tum_2024/results/cifar/: accuracies.png:Zone.Identifier  losses_train_vs_test.png:Zone.Identifier  test_loss.png:Zone.Identifier  train_loss.png:Zone.Identifier
tum_2024/results/cifar/dropout_0.0/: model.pth  test_accuracies.json  test_losses.json  train_losses.json
tum_2024/results/cifar/dropout_0.2/: model.pth  test_accuracies.json  test_losses.json  train_losses.json
tum_2024/results/cifar/dropout_0.4/: model.pth  test_accuracies.json  test_losses.json  train_losses.json
tum_2024/results/cifar/dropout_0.6/: model.pth  test_accuracies.json  test_losses.json  train_losses.json
tum_2024/results/cifar/dropout_0.8/: model.pth  test_accuracies.json  test_losses.json  train_losses.json
tum_2024/results/mnist/dropout_0.0/: model.pth  test_accuracies.json  test_losses.json  train_losses.json
tum_2024/results/mnist/dropout_0.2/: model.pth  test_accuracies.json  test_losses.json  train_losses.json
tum_2024/results/mnist/dropout_0.4/: model.pth  test_accuracies.json  test_losses.json  train_losses.json
tum_2024/results/mnist/dropout_0.6/: model.pth  test_accuracies.json  test_losses.json  train_losses.json
tum_2024/results/mnist/dropout_0.8/: model.pth  test_accuracies.json  test_losses.json  train_losses.json
tum_2024/results_old/mnist/dropout_0.0/: model.pth  test_accuracies.json  test_losses.json  (+1 more)
(+39 files in other folders)
