[tool.poetry]
name = "tum-2024"
version = "0.1.0"
description = ""
authors = ["m-prezes <mateusz.politycki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
notebook = "^7.2.0"
seaborn = "^0.13.2"
torch = "^2.3.0"
black = {extras = ["jupyter"], version = "^24.4.2"}
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
